tests/instantiating/bus_width_too_small/stderr.golden
error: invalid bus width 4, valid bus width must be greater than 7 and must be a power of 2
bus.fbd +2:11
   |
 2 |   width = 4
   |           ^
